# tatami_mtx

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  classes.html  dir_1d4e5f075fee6f556c21794f8a15f9cc.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  graph_legend.html  index.html  load__matrix_8hpp.html  load__matrix_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacetatami__mtx.html  structtatami__mtx_1_1Automatic.html  structtatami__mtx_1_1LoadMatrixOptions-members.html  structtatami__mtx_1_1LoadMatrixOptions.html  structtatami__mtx_1_1Options-members.html  structtatami__mtx_1_1Options.html  structtatami__mtx_1_1WriteMatrixOptions-members.html  structtatami__mtx_1_1WriteMatrixOptions.html  tatami__mtx_8hpp.html  tatami__mtx_8hpp_source.html  tatami_hdf5.tag  tatami_mtx.tag  write__matrix_8hpp.html  write__matrix_8hpp_source.html
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  files_1.js  files_10.js  files_11.js  files_2.js  files_6.js  files_8.js  files_9.js  files_a.js  (+36 more)
include/tatami_mtx/: load_matrix.hpp  tatami_mtx.hpp  utils.hpp  write_matrix.hpp
tests/: CMakeLists.txt
tests/src/: load_matrix.cpp  write_matrix.cpp
